frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-platform-ui
  labels:
    app: flink-platform-ui
spec:
  type: ClusterIP
  selector:
    app: flink-platform-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
